syntax = "proto3";
package publisher;

option java_package = "com.ebs.publisher.features.publisher.proto_classes";
option java_outer_classname = "MessageProto";

import "src/main/java/com/ebs/publisher/features/publisher/proto_files/pub.proto";
import "src/main/java/com/ebs/publisher/features/publisher/proto_files/sub.proto";

message MsgProto {
  string messageType = 1;
  oneof message {
    SubProto subscription = 2;
    PubProto publication = 3;
  }
}
